k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salesforce-integration-service
  namespace: salesforce-integration
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: salesforce-integration-service
                port:
                  number: 80
